5/20/14 convert 'Reset Balloons' button to sun.buttons.RectangularPushButton
Added local copy of new ResetAllButton and associated images
Added black to the left of the screen to match the black region to the right of the wall
Reduced the specular highlight on the charges