@@ -1,3 +1,4 @@
+5/20/14 convert 'Remove Wall' button from a Panel to a sun.buttons.RectangularPushButton
 5/20/14 convert 'Reset Balloons' button to sun.buttons.RectangularPushButton
 Added local copy of new ResetAllButton and associated images
 Added black to the left of the screen to match the black region to the right of the wall
